tailscale-operator/navidrome-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-tailscale
  namespace: media
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "navidrome"
    tailscale.com/tags: "tag:k8s"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: navidrome
  ports:
  - port: 80
    targetPort: 4533
    protocol: TCP
    name: http
