tailscale-operator/account-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-tailscale
  namespace: ess
  annotations:
    tailscale.com/tags: "tag:matrix"
spec:
  ingressClassName: tailscale
  rules:
  - host: account
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ess-matrix-authentication-service
            port:
              number: 8080
  tls:
  - hosts:
    - account
