tailscale-operator/bitwarden-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden-tailscale
  namespace: bitwarden
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  rules:
  - host: bitwarden
    http:
      paths:
      # Proxy everything to nginx which handles path rewriting
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bitwarden-nginx-proxy
            port:
              number: 80
  tls:
  - hosts:
    - bitwarden
