tailscale-operator/immich-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
  namespace: immich
  annotations:
    tailscale.com/tags: "tag:media,tag:immich"
spec:
  ingressClassName: tailscale
  rules:
  - host: immich
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 2283
  tls:
  - hosts:
    - immich
