tailscale-operator/librespeed-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-tailscale
  namespace: librespeed
  annotations:
    tailscale.com/tags: "tag:librespeed"
spec:
  ingressClassName: tailscale
  rules:
  - host: speedtest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librespeed
            port:
              number: 80
  tls:
  - hosts:
    - speedtest
