tailscale-operator/matrix-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-tailscale
  namespace: ess
  annotations:
    tailscale.com/tags: "tag:matrix"
spec:
  ingressClassName: tailscale
  rules:
  - host: matrix
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ess-synapse
            port:
              number: 8008
  tls:
  - hosts:
    - matrix
