tailscale-operator/navidrome-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:navidrome"
spec:
  ingressClassName: tailscale
  rules:
  - host: navidrome
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 4533
  tls:
  - hosts:
    - navidrome
