tailscale-operator/plane-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-tailscale
  namespace: plane
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  rules:
  - host: plane
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plane-web-clusterip
            port:
              number: 3000
  tls:
  - hosts:
    - plane
