tailscale-operator/spotizerr-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotizerr-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  rules:
  - host: spotizerr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotizerr
            port:
              number: 7171
  tls:
  - hosts:
    - spotizerr
