tailscale-operator/uptime-kuma-ts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-tailscale
  namespace: uptime-kuma
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  rules:
  - host: uptime-kuma
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
  tls:
  - hosts:
    - uptime-kuma
